# cudaLearning

./: CMakeLists.txt  build.sh
0_device/: CMakeLists.txt  getDevice.cu
0_practice/: CMakeLists.txt  add_1.cu  getDevice.cu  helloWorld.cu  matrixSum1D_GPU.cu  matrixSum1D_GPU_if_device.cu
10_leetgpu/: softmax.cu
1_grid_block_and_thread/: CMakeLists.txt  helloWorld.cu
1_reduce/: CMakeLists.txt  add_1.cu  baseline.cu  matrixSum1D_CPU.cu
2_vector_add/: CMakeLists.txt  add.cu  add_optimised.cu
3_matmul/: CMakeLists.txt  matmul.cu
3_reduce/: CMakeLists.txt  baseline.cu  optimised2_warp_no_divergence.cu  optimised3_fix_bank_conflict.cu  optimised4_1_reduce_thread.cu  optimised4_2_reduce_block.cu  optimised5_reduce_sync.cu  optimised6_warp_shuffle.cu
4_nsight_compute/: CMakeLists.txt  add.cu  add_dev_only.cu
4_reduce/: CMakeLists.txt  baseline.cu  baseline_official.cu  optimised1_shared_memory.cu
5_transpose/: CMakeLists.txt  transpose.cu  transpose_16_16  transpose_32_8  transpose_8_32  transpose_optimised.cu
6_sgemm/: .$gemm.drawio.bkp  CMakeLists.txt  gemm.drawio  sgemm.cu
99_operators/uss/: CMakeLists.txt  uss.cu
UVM/: CMakeLists.txt  normal.cu  uvm.cu  uvm_prefetch.cu
util/: CMakeLists.txt  util.cpp  util.h
